force-app/main/default/objects/zkups__UPSSEDForm__c/zkups__UPSSEDForm__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkups__internationalShipmentHelp</customHelpPage>
    <description>UPS EEI Form is a collection of data defined for generating a Electronic Export Information</description>
    <label>UPS EEI Form</label>
    <nameField>
        <displayFormat>UPS-EEI-{0000}</displayFormat>
        <label>UPS EEI Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS EEI Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>