force-app/main/default/objects/zkups__UPSSEDForm__c/fields/zkups__SignificantMilitaryEquipment__c.field-meta.xml
<CustomField>
    <fullName>zkups__SignificantMilitaryEquipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Significant Military Equipment</label>
    <type>Checkbox</type>
</CustomField>