force-app/main/default/objects/zkups__UPSSEDForm__c/validationRules/zkups__CheckUltimate_Consignee_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>zkups__CheckUltimate_Consignee_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(zkups__EEIFillingType__c)=&apos;Shipper filed&apos;,TEXT(zkups__UltimateConsigneeType__c) = null)</errorConditionFormula>
    <errorDisplayField>zkups__UltimateConsigneeType__c</errorDisplayField>
    <errorMessage>Please select option</errorMessage>
</ValidationRule>