force-app/main/default/objects/zkups__UPSSEDForm__c/validationRules/zkups__Requires_the_Exemption_Legend_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>zkups__Requires_the_Exemption_Legend_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(zkups__EEIShipper__c)=&apos;Requires the Exemption Legend&apos;,TEXT(zkups__ExemptionLegend__c)=null)</errorConditionFormula>
    <errorDisplayField>zkups__ExemptionLegend__c</errorDisplayField>
    <errorMessage>Please select option</errorMessage>
</ValidationRule>