force-app/main/default/objects/zkups__UPSSEDForm__c/validationRules/zkups__Requires_the_ITN_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>zkups__Requires_the_ITN_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(zkups__EEIShipper__c)=&apos;Requires the ITN&apos;,zkups__PreDepartureITNNumber__c=null)</errorConditionFormula>
    <errorDisplayField>zkups__PreDepartureITNNumber__c</errorDisplayField>
    <errorMessage>Please fill field</errorMessage>
</ValidationRule>