force-app/main/default/objects/zkups__UPSSEDForm__c/validationRules/zkups__Shipper_filed_check.validationRule-meta.xml
<ValidationRule>
    <fullName>zkups__Shipper_filed_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(zkups__EEIFillingType__c)=&apos;Shipper filed&apos;,TEXT(zkups__EEIShipper__c)=null)</errorConditionFormula>
    <errorDisplayField>zkups__EEIShipper__c</errorDisplayField>
    <errorMessage>Please choose option</errorMessage>
</ValidationRule>