force-app/main/default/objects/zkups__UPSSEDForm__c/validationRules/zkups__UPS_filed_check.validationRule-meta.xml
<ValidationRule>
    <fullName>zkups__UPS_filed_check</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(zkups__EEIFillingType__c)=&apos;UPS filed&apos;</errorConditionFormula>
    <errorDisplayField>zkups__EEIFillingType__c</errorDisplayField>
    <errorMessage>&apos;UPS filled&apos; option is not supported.</errorMessage>
</ValidationRule>